# matrix

./: CMakeLists.txt  LICENSE  README.md
include/: matrix.hpp  matrix_view.hpp
src/: main.cpp
